--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -267,8 +267,8 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = ""
-  google_tag_manager = ""
+  google_analytics = "G-77JELZ2JFX"
+  google_tag_manager = "G-77JELZ2JFX"
 
 ############################
 ## Content Management System
