--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -35,7 +35,7 @@
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/resume.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "media/resume.pdf"
-#    weight = 70
+ [[main]]
+    name = "Resume"
+    url = "Ullas_Srivastava_NYU_MOT_3478731621.pdf"
+    weight = 70
